新增设置页面，修改统计代码位置

--- a/css/user/index/active.less
+++ b/css/user/index/active.less
@@ -1,4 +1,3 @@
-
 //我的动态
 .user-active-me{
 	margin:20px 0;
@@ -30,5 +29,38 @@
 				//letter-spacing:5px;
 			}
 		}
+	}
+}
+
+//其他人动态
+.user-os-active #feed_div{
+	.et{
+		.bold;
+		margin-top:10px;
+	}
+	.el{
+		//border-bottom:1px dashed #ddd;
+		//padding-left:10px;
+	}
+	.el li .o{
+		.db !important; 
+		float: right;
+	    width: 20px;
+	    height: 20px;
+	    .indent;
+	    overflow: hidden;
+	    background:url('@{urls}common/op.png') no-repeat 0 -40px;
+	}
+	.ec{
+		color:#666;
+		.hot{.none;}
+		.d b{
+			.color(@blue-link,@blue-link,@blue-link);
+			a:hover{text-decoration:underline;}
+		}
+	}
+	.bbda{
+		padding-top:10px;
+		.avt{margin-top:0;}
 	}
 }
