--- a/css/user/index/header.less
+++ b/css/user/index/header.less
@@ -135,8 +135,7 @@
 
 }
 
-.ua-responsive .screen-s{
-	padding-top:0;
+.ua-mobile,.screen-s{
 	background-color:#f7f7f7;
 	.user-os-active{.none;}
 	.user-os-header{padding:0;background-color:#fff;margin-bottom:12px;}
