--- a/css/user/index/index.less
+++ b/css/user/index/index.less
@@ -8,4 +8,6 @@
 //@import url('primary.less');		
 @import url('nav.less');		
 @import url('content.less');		
+@import url('setting.less');
 @import url('footer.less');		
+		
