--- a/template/default/common/footer.htm
+++ b/template/default/common/footer.htm
@@ -159,6 +159,7 @@
 	<!--{/if}-->
 <!--{eval output();}-->
 	
+	<p class="c-footer-stat none"><!--{if $_G['setting']['statcode']}-->$_G['setting']['statcode']<!--{/if}--></p>
 	<script src="http://js.jx3pve.com/js/mod/footer.min.js"></script>
 
 </body>
