--- a/template/yylmacro/home/0.首页/os_content.htm
+++ b/template/yylmacro/home/0.首页/os_content.htm
@@ -1,25 +1,4 @@
-<div class="user-os-content" id="user-os-content">
+<div class="user-os-content">
 
-	<div class="user-os-nav">
-		<ul>
-			<li><a href="./home.php?mod=spacecp&ac=profile&op=password">修改密码</a></li>
-			<!-- <li><a href="./home.php?mod=spacecp&ac=plugin&op=profile&id=k_gaiming:k_gaiming">修改用户名</a></li> -->
-			<!-- <li><a href="./home.php?mod=spacecp&ac=profile">完善资料</a></li> -->
-			<!-- <li><a href="./home.php?mod=spacecp&ac=profile&op=verify">申请认证</a></li> -->
-			<li><a href="./home.php?mod=spacecp&ac=plugin&id=qqconnect:spacecp">绑定QQ</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=plugin&id=mpage_weibo:bind">绑定微博</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=sendmail">邮件通知</a></li>
-			<li><a href="./home.php?mod=spacecp&ac=privacy">隐私设置</a></li>
-		</ul>
-	</div>
-
-	<div class="user-os-content-back" id="user-os-content-back">返回</div>
-
-	<!--{if $_G['uid']}-->
-	<a class="user-os-logout" href="member.php?mod=logging&action=logout&formhash={FORMHASH}">{lang logout}</a>
-	<!--{else}-->
-	<a class="user-os-login" href="./login">登录</a>
-	<!--{/if}-->
-	
 </div>
 
