个人中心-资料

--- a/css/user/common/layout.less
+++ b/css/user/common/layout.less
@@ -9,17 +9,12 @@
 	.fr;
 	.w(@ctm);
 }
-.ua-responsive .screen-m{
-	.user-content{
-		.w(@ctm);
+.ua-mobile,.screen-s{
+	.user-container .wp{
+		padding:0;
 	}
-}
-.ua-responsive .screen-s{
 	.user-content{
 		.w(auto);
 		float:none;
-	}
-	.user-container .wp{
-		padding:0;
 	}
 }
