--- a/template/yylmacro/home/3.资料/spacecp_plugin.htm
+++ b/template/yylmacro/home/3.资料/spacecp_plugin.htm
@@ -13,7 +13,7 @@
 
 		<div class="user-main">
 			<!--{subtemplate home/sidebar}-->
-			<div class="user-content">
+			<div class="user-content user-profile-plugin">
 
 				<div id="ct" class="ct2_a cl">
 					<div class="mn">
