--- a/css/user/profile/profile.less
+++ b/css/user/profile/profile.less
@@ -1,6 +1,9 @@
 @import url('../../public/base.less');		//函数
 @import url('../../global/var.less');			//常量
 @import url('../../global/color.less');		//配色
+@import url('../../module/ui/text.less');
+@import url('../../module/ui/select.less');
+@import url('../../module/ui/textarea.less');
 
 
 @import url('info.less');
