--- a/css/module/ui/tab.less
+++ b/css/module/ui/tab.less
@@ -42,7 +42,7 @@
 	}
 	.tb{
 		min-width:100%;
-		max-width:100%;
+		//max-width:100%;
 		padding:0;
 		li{margin:0;}
 		a{border:none;background: none;padding:5px 15px;}
