--- a/css/user/other/email.css
+++ b/css/user/other/email.css
@@ -1,1 +1,1 @@
-.ua-responsive .screen-s form{padding:10px}.ua-responsive .screen-s .tfm caption{display:block}
+.ua-mobile form,.screen-s form{padding:10px}.ua-mobile .tfm caption,.screen-s .tfm caption{display:block}.ua-mobile .tfm th,.screen-s .tfm th{width:auto;font-weight:bold}.ua-mobile .tfm .pn,.screen-s .tfm .pn{margin-bottom:20px;margin-left:auto;margin-right:auto;display:block;width:60%}
