--- a/template/yylmacro/home/7.其它/spacecp_privacy.htm
+++ b/template/yylmacro/home/7.其它/spacecp_privacy.htm
@@ -2,15 +2,11 @@
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/other/privacy.css" type="text/css" />
 <header class="i-header">
-	<a class="i-header-back" href="./home.php"><i></i></a>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
 	<div class="i-header-title">隐私设置</div>
-	<div class="i-header-menu">
-		<a class="u-all" id="i-header-panel-tg" href="javascript:;"><span>更多</span></a>
-	</div>
 </header>
 <div class="user-container">
 	<div class="wp">
-
 		<div id="pt" class="bm cl">
 			<div class="z">
 				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
