新增推广页样式

--- a/css/user/other/privacy.less
+++ b/css/user/other/privacy.less
@@ -2,6 +2,12 @@
 @import url('../../global/var.less');			//常量
 @import url('../../global/color.less');		//配色
 
+
+.tfm .u-select{
+	padding:6px 10px;
+	.w(40%);
+}
+
 .ua-mobile,.screen-s{
 
 	form{
@@ -29,4 +35,8 @@
 		.w(60%);
 	}
 
+	.tfm .u-select{
+		.w(100%);
+		box-sizing:border-box;
+	}
 }
