--- a/template/yylmacro/home/7.其它/spacecp_privacy.htm
+++ b/template/yylmacro/home/7.其它/spacecp_privacy.htm
@@ -41,7 +41,7 @@
 									<tr>
 										<th>{lang friend_list}</th>
 										<td>
-											<select name="privacy[view][friend]">
+											<select name="privacy[view][friend]" class="u-select">
 												<option value="0"$sels[view][friend][0]>{lang open_privacy}</option>
 												<option value="1"$sels[view][friend][1]>{lang friend_privacy}</option>
 												<option value="2"$sels[view][friend][2]>{lang secrecy}</option>
@@ -53,7 +53,7 @@
 									<tr>
 										<th>{lang message_board}</th>
 										<td>
-											<select name="privacy[view][wall]">
+											<select name="privacy[view][wall]" class="u-select">
 												<option value="0"$sels[view][wall][0]>{lang open_privacy}</option>
 												<option value="1"$sels[view][wall][1]>{lang friend_privacy}</option>
 												<option value="2"$sels[view][wall][2]>{lang secrecy}</option>
@@ -66,7 +66,7 @@
 									<tr>
 										<th>{lang personal_feed}</th>
 										<td>
-											<select name="privacy[view][home]">
+											<select name="privacy[view][home]" class="u-select">
 												<option value="0"$sels[view][home][0]>{lang open_privacy}</option>
 												<option value="1"$sels[view][home][1]>{lang friend_privacy}</option>
 												<option value="3"$sels[view][home][3]>{lang privacy_register}</option>
@@ -78,7 +78,7 @@
 									<tr>
 										<th>{lang doing}</th>
 										<td>
-											<select name="privacy[view][doing]">
+											<select name="privacy[view][doing]" class="u-select">
 												<option value="0"$sels[view][doing][0]>{lang open_privacy}</option>
 												<option value="1"$sels[view][doing][1]>{lang friend_privacy}</option>
 												<option value="3"$sels[view][doing][3]>{lang privacy_register}</option>
@@ -91,7 +91,7 @@
 									<tr>
 										<th>{lang blog}</th>
 										<td>
-											<select name="privacy[view][blog]">
+											<select name="privacy[view][blog]" class="u-select">
 												<option value="0"$sels[view][blog][0]>{lang open_privacy}</option>
 												<option value="1"$sels[view][blog][1]>{lang friend_privacy}</option>
 												<option value="3"$sels[view][blog][3]>{lang privacy_register}</option>
@@ -104,7 +104,7 @@
 									<tr>
 										<th>{lang album}</th>
 										<td>
-											<select name="privacy[view][album]">
+											<select name="privacy[view][album]" class="u-select">
 												<option value="0"$sels[view][album][0]>{lang open_privacy}</option>
 												<option value="1"$sels[view][album][1]>{lang friend_privacy}</option>
 												<option value="3"$sels[view][album][3]>{lang privacy_register}</option>
@@ -117,7 +117,7 @@
 									<tr>
 										<th>{lang share}</th>
 										<td>
-											<select name="privacy[view][share]">
+											<select name="privacy[view][share]" class="u-select">
 												<option value="0"$sels[view][share][0]>{lang open_privacy}</option>
 												<option value="1"$sels[view][share][1]>{lang friend_privacy}</option>
 												<option value="3"$sels[view][share][3]>{lang privacy_register}</option>
@@ -134,7 +134,7 @@
 									<tr>
 										<th>{lang view_my_certified_photo}</th>
 										<td>
-											<select name="privacy[view][videoviewphoto]">
+											<select name="privacy[view][videoviewphoto]" class="u-select">
 												<option value="0"$sels[view][videoviewphoto][0]>{lang site_default_setting}</option>
 												<option value="1"$sels[view][videoviewphoto][1]>{lang allow}</option>
 												<option value="2"$sels[view][videoviewphoto][2]>{lang ban}</option>
