--- a/template/yylmacro/home/7.其它/spacecp_promotion.htm
+++ b/template/yylmacro/home/7.其它/spacecp_promotion.htm
@@ -1,12 +1,12 @@
 <!--{template common/header_m}-->
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/user/other/promotion.css" type="text/css" />
 <header class="i-header">
-	<a class="i-header-back" href="./home.php"><i></i></a>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
 	<div class="i-header-title">访问推广</div>
 </header>
 <div class="user-container">
 	<div class="wp">
-
 		<div id="pt" class="bm cl">
 			<div class="z">
 				<a href="./" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
@@ -44,14 +44,14 @@
 									<tr>
 										<th>{lang post_promotion_url1}</th>
 										<td class="pns">
-											<input type="text" class="px vm" onclick="this.select();setCopy('{$copystr}'+'\n'+this.value, '{lang promotion_url_copied}');" value="$_G[siteurl]?fromuid=$_G[uid]" size="50" />
+											<input type="text" class="px vm u-text" onclick="this.select();setCopy('{$copystr}'+'\n'+this.value, '{lang promotion_url_copied}');" value="$_G[siteurl]?fromuid=$_G[uid]" size="50" />
 											<button type="submit" class="pn vm" onclick="setCopy('{$copystr}'+'\n'+'$_G[siteurl]?fromuid=$_G[uid]', '{lang promotion_url_copied}');" type="submit"><em>{lang copy}</em></button>
 										</td>
 									</tr>
 									<tr>
 										<th>{lang post_promotion_url2}</th>
 										<td class="pns">
-											<input type="text" class="px vm" onclick="this.select();setCopy('{$copystr}'+'\n'+this.value, '{lang promotion_url_copied}');" value="$_G[siteurl]?fromuser={echo rawurlencode($_G[username])}" size="50" />
+											<input type="text" class="px vm u-text" onclick="this.select();setCopy('{$copystr}'+'\n'+this.value, '{lang promotion_url_copied}');" value="$_G[siteurl]?fromuser={echo rawurlencode($_G[username])}" size="50" />
 											<button type="submit" class="pn vm" onclick="setCopy('{$copystr}'+'\n'+'$_G[siteurl]?fromuser={echo rawurlencode($_G[username])}', '{lang promotion_url_copied}');"><em>{lang copy}</em></button>
 										</td>
 									</tr>
