资料页面修订

--- a/css/user/profile/info.less
+++ b/css/user/profile/info.less
@@ -45,6 +45,13 @@
 .ua-mobile,.screen-s{
 
 	.user-profile-info{
+		form{
+			padding:10px;
+			box-sizing:border-box;
+		}
+		p.pbm{
+			padding:10px 10px 0 10px;
+		}
 		//必填项
 		.tfm th .rq{
 			.fl;
@@ -76,6 +83,26 @@
 			.auto(x);
 			.db;
 			.w(60%);
+		}
+	}
+
+	.user-profile-infomodif{
+		.tfm .p{
+			.x(left);
+			.u-select{
+				.w(80px);
+				.none;
+			}
+		}
+		.tfm tr td:nth-child(3){
+			.none;
+		}
+		.tfm .pt{
+			.w(100%);
+			box-sizing:border-box;
+		}
+		#td_sightml .tedt{
+			.w(100%);
 		}
 	}
 }
