--- a/template/yylmacro/home/3.资料/iheader_profile.htm
+++ b/template/yylmacro/home/3.资料/iheader_profile.htm
@@ -9,6 +9,12 @@
 		绑定QQ
 	<!--{elseif ($_GET['id']=="mpage_weibo:bind")}-->
 		绑定微博
+	<!--{elseif ($_GET['ac']== "avatar") }-->
+		头像
+	<!--{elseif ($_GET['op']== "verify") }-->
+		认证
+	<!--{else}-->
+		资料修改
 	<!--{/if}-->
 	</div>
 </header>
