--- a/template/yylmacro/home/3.资料/spacecp_profile.htm
+++ b/template/yylmacro/home/3.资料/spacecp_profile.htm
@@ -54,7 +54,7 @@
 									</p>
 									<form action="home.php?mod=spacecp&ac=profile" method="post" autocomplete="off">
 										<input type="hidden" value="{FORMHASH}" name="formhash" />
-										<table summary="{lang memcp_profile}" cellspacing="0" cellpadding="0" class="tfm">
+										<table summary="{lang memcp_profile}" cellspacing="0" cellpadding="0" class="tfm user-profile-password">
 											<!--{if !$_G['setting']['connect']['allow'] || !$conisregister}-->
 												<tr>
 													<th><span class="rq" title="{lang required}">*</span>{lang old_password}</th>
