--- a/css/user/extend/common.less
+++ b/css/user/extend/common.less
@@ -15,7 +15,7 @@
 	}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.tbmu{padding-left:10px;}
 	.mgcl{padding-left:10px;}
 	.mgcl li{margin-right:25px;margin-bottom:10px;}
