--- a/css/user/extend/lucky.less
+++ b/css/user/extend/lucky.less
@@ -142,11 +142,14 @@
 	}
 }
 
-.ua-responsive .screen-s{
+.ua-mobile,.screen-s{
 	.m-lucky-topbox .y{.none;}
 
 	.m-jiyu-toplist .up, .m-jiyu-toplist .down{
 		.w(100%);
 		float:none;
+	}
+	.boardnav{
+		padding-top:0 !important;
 	}
 }
