--- a/css/user/extend/magic.less
+++ b/css/user/extend/magic.less
@@ -1,15 +1,20 @@
-.dt{
-	border-top:1px solid #eee;
+.user-magic{
+	.dt{
+		border-top:1px solid #eee;
+	}
+	.dt td, .dt th{
+		padding:5px;
+		border-bottom:1px solid #eee;
+	}
+	.dt th{
+		background-color:#f7f7f7;
+	}
 }
-.dt td, .dt th{
-	padding:5px;
-	border-bottom:1px solid #eee;
-}
-.dt th{
-	background-color:#f7f7f7;
-}
-.ua-responsive .screen-s .m-magic-log{
-	th,td{
-		.w(auto);
+
+.ua-mobile,.screen-s{
+	.m-magic-log{
+		th,td{
+			.w(auto);
+		}
 	}
 }
