--- a/css/user/extend/medal.less
+++ b/css/user/extend/medal.less
@@ -1,27 +1,28 @@
+.user-medal{
+	.mg_img{
+		.x;
+	}
 
-.mg_img{
-	.x;
-}
-
-.el{
-	line-height:26px;
-	.t{
-		.dbi;.y;
-		img{.size(18px);.r(2px);.db;}
-		margin-right:5px;
-		margin-top:-1px;
-	}
-	li{
-		border-bottom:1px solid #eee;
-		line-height:40px;
-	}
-	li .xi2{
-		.color(@blue-link);
-	}
-	li strong{
-		.color(#555);
-	}
-	li{
-		padding:2px 5px;
+	.el{
+		line-height:26px;
+		.t{
+			.ps;
+			.dbi;.y;
+			img{.size(18px);.r(2px);.db;}
+			margin:-1px 5px 0 0;
+		}
+		li{
+			border-bottom:1px solid #eee;
+			line-height:40px;
+		}
+		li .xi2{
+			.color(@blue-link);
+		}
+		li strong{
+			.color(#555);
+		}
+		li{
+			padding:2px 5px;
+		}
 	}
 }
