--- a/template/yylmacro/home/6.扩展/space_medal.htm
+++ b/template/yylmacro/home/6.扩展/space_medal.htm
@@ -17,7 +17,7 @@
 
 		<div class="user-main">
 			<!--{subtemplate home/sidebar}-->
-			<div class="user-content">
+			<div class="user-content user-medal">
 
 				<div id="ct" class="ct2_a cl">
 					<div class="mn">
