--- a/template/yylmacro/home/6.扩展/space_task.htm
+++ b/template/yylmacro/home/6.扩展/space_task.htm
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/user.css" type="text/css" />
 <link rel="stylesheet" href="http://css.jx3pve.com/css/user/extend/extend.css" type="text/css" />
 <header class="i-header">
-	<a class="i-header-back" href="./home.php"><i></i></a>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
 	<div class="i-header-title">任务</div>
 </header>
 <div class="user-container">
