关于系列页面

--- a/template/about/forum/forumdisplay_header.htm
+++ b/template/about/forum/forumdisplay_header.htm
@@ -1,5 +1,5 @@
 <header class="i-header i-header-list">
-	<a class="i-header-back" href="./sitemap"><i></i><span></span></a>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
 	<div class="i-header-title">$_G['forum']['threadsorts']['types'][$_GET['sortid']]</div>
 	<div class="i-header-menu">
 		<!-- 发布帖子 -->
