--- a/template/about/portal/portal_topic_search.htm
+++ b/template/about/portal/portal_topic_search.htm
@@ -1,5 +1,5 @@
 <!--{subtemplate common/header_m}-->
-<link rel="stylesheet" href="http://test.jx3pve.com/css/system/search.css" type="text/css" />
+<link rel="stylesheet" href="http://css.jx3pve.com/css/system/search.css" type="text/css" />
 <header class="i-header">
 	<div class="i-header-title">搜索</div>
 </header>
@@ -18,5 +18,5 @@
 	</script>
 	<script type="text/javascript" src="http://zhannei.baidu.com/static/js/iframe.js"></script>-->
 </div>
-<script src="http://test.jx3pve.com/js/page/page-search.min.js"></script>
+<script src="http://js.jx3pve.com/js/page/page-search.min.js"></script>
 <!--{subtemplate common/footer}-->
