--- a/template/about/portal/portal_topic_contact.htm
+++ b/template/about/portal/portal_topic_contact.htm
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/system.css" type="text/css" />
 <link rel="stylesheet" href="http://css.jx3pve.com/css/system/about.css" type="text/css" />
 <header class="i-header">
-	<a class="i-header-back" href="./"><i></i></a>
+	<a class="i-header-back" href="javascript:;" onclick="history.go(-1)"><i></i></a>
 	<div class="i-header-title">合作联系</div>
 	<div class="i-header-menu">
 		<a class="u-all" id="i-header-sidebar-tg" href="javascript:;"><span>更多</span></a>
