--- a/css/system/about/join.less
+++ b/css/system/about/join.less
@@ -53,7 +53,7 @@
 		.none;
 	}
 }
-.ua-responsive .screen-s{
+.ua-mobile{
 	.m-about-join .default{
 		.role{.w(30%);}
 		.email{.w(30%);}
@@ -63,6 +63,6 @@
 		}
 	}
 }
-.ua-responsive .screen-s.sort-26{
+.ua-mobile .sort-26{
 	.wp{padding:0;}
 }
