--- a/css/system/about/log.less
+++ b/css/system/about/log.less
@@ -35,7 +35,7 @@
 	}
 	.i-header-menu .u-post{.db;}
 }
-.ua-responsive .screen-s{
+.ua-mobile{
 	.pg{
 		float:none;
 		margin-bottom:10px;
@@ -48,6 +48,5 @@
 } 
 
 //列表
-.ua-responsive .screen-m .m-timelist ul{padding-left:100px;}
-.ua-responsive .screen-s .mn{overflow:visible;} //for phone
+.ua-mobile .mn{overflow:visible;} //for phone
 
