--- a/css/system/about/sidebar.less
+++ b/css/system/about/sidebar.less
@@ -1,4 +1,4 @@
-.ua-responsive .screen-s .default-sidebar{
+.ua-mobile .default-sidebar{
 	//.db;
 	.pf;.lt(0,@c-header-height);
 	.z(40);
@@ -12,6 +12,6 @@
 .pg_forumdisplay .i-header{
 	.z(40);
 }
-.alertHTML.ua-responsive .screen-s .default-sidebar{
+.alertHTML.ua-mobile .default-sidebar{
 	top:@c-header-height + @c-alert-height;
 }
