--- a/css/system/bak/search.less
+++ b/css/system/bak/search.less
@@ -1,5 +1,5 @@
 @import url('../public/base.less');		//函数
-@import url('../public/path.less');		//路径
+@import url('../global/var.less');		//路径
 @import url('../global/color.less');	//配色
 
 html,body,.jx3pve-container,.search-container,.iframe-search{
@@ -9,16 +9,10 @@ html,body,.jx3pve-container,.search-container,.iframe-search{
 .iframe-search{
 	//height:~"calc(100% - 48px)";
 }
-.ua-responsive{
- 	.screen-s,.screen-m{
-		.jx3pve-container{
-			padding-top:0;
-		}
+.ua-mobile{
+	.jx3pve-container{
+		padding-top:0;
 	}
-}
-.ua-responsive .screen-m{
-	.c-footer{.none;}
-	.c-header,.c-header-nav{.none;}
 }
 
 /*.ua-responsive .screen-s{
