--- a/css/system/system.less
+++ b/css/system/system.less
@@ -40,26 +40,32 @@
 	padding:0;
 }
 
-.ua-responsive .screen-s .system-sidebar{.none;}
-.ua-responsive .screen-s .system-sidebar{
-	//.db;
-	.pf;.lt(0,@c-header-height);
-	.z(40);
-	.w(100%);
-	padding:10px 0;
-	border-bottom:1px solid #ddd;
-	background-color:#fff;
-	.r(0);
+.ua-mobile,.screen-s{
+
+	.system-sidebar{
+		.none;
+		.pf;.lt(0,@c-header-height);
+		.z(40);
+		.w(100%);
+		padding:10px 0;
+		border-bottom:1px solid #ddd;
+		background-color:#fff;
+		.r(0);
+	}
+
+	.system-content{
+		.w(auto);
+		float:none;
+	}
 }
+
+
 .i-header.showSidebar{
 	.z(40);
 }
-.alertHTML.ua-responsive .screen-s .system-sidebar{
-	top:@c-header-height + @c-alert-height;
+.alertHTML.ua-mobile{
+	.system-sidebar{
+		top:@c-header-height + @c-alert-height;
+	}
 }
-.ua-responsive .screen-s .system-content{
-	.w(auto);
-	float:none;
-}
-
 
