--- a/css/user/bbs/guide.less
+++ b/css/user/bbs/guide.less
@@ -2,151 +2,27 @@
 @import url('../../global/color.less');	//配色
 @import url('../../global/var.less');		//尺寸
 
-.subtb{
-	margin-top:0;
+@import url('guide/form.less');
+@import url('guide/tab.less');
+@import url('guide/search.less');
+@import url('guide/item.less');
+@import url('guide/tips.less');
+
+.i-header{
+	.z(40);
 }
-table{
-	.full(x);
-}
-.tl .th{
-	background: none;
-	border:none;
-	padding:0;
-}
-.tl th, .tl td{
-	padding:0;
-	border:none;
-}
-.tl tr:hover th,.tl tr:hover td{
-	background:@blue-bg;
-}
-.th tr:hover td{
-	background: none;
-}
-.tl .th td, .tl .th th{
-	padding:0;
-}
-.th *{
-	.db;
-}
-.tl_reply{
-	background: none;
-	padding:0;
-}
-.tl .th td, .tl .th th{
-	.h(auto);
-}
-.pn.vm{
-	margin-top:5px;
-	padding:0 10px;
-}
-.xst{
-	font-family: 'Helvetica Neue',Helvetica,Arial,sans-serif,"宋体";
-	font-size:inherit;
-}
-.tbbox{
+
+.guide-content{
 	.pr;
 }
 
-h1.mt{.none;}
-.u-btn-publish{
-	.fr;
-	.none;
-}
-.m-guide-authortips{
-	.pa;.rt(0,0);
-	.fz(13px);
-	a{padding:0 5px;}
-	.color(#888,@yel,@yel);
-	a:hover{text-decoration:underline;}
-}
-
-.user-guide-type{
-	margin-bottom:10px;
-	a{padding:0 10px;}
-}
-
-#thread_types{
-	.none;
-}
-
-#threadlist .th{
-	.u-guideitem{
-		color:#555;
-	}
-	.u-title{
-		//.indent(20px);
-		color:#555;
-	}
-}
-
-.bm_c{padding:0;}
-.u-guideitem{
-	table{.w(100%);}
-	.u-title,.u-count,.u-pubtime{
-		.db;.fl;
-	}
-	.u-count,.u-pubtime{
-		.x(right);
-	}
-	.u-title{.w(70%);}
-	.u-count{.w(15%);}
-	.u-pubtime{.w(15%);}
-
-	.u-title{
-		.color(@blue-link,@blue-link,#c00);
-		.tps{.none;}
-		img{margin-left:3px;margin-top:-3px;}
-	}
-	.u-bankuai{
-		.color(#666,#666,#666);
-		margin-right:5px;
-	}
-	.u-count,.u-pubtime{
-		color:#555;
-	}
-}
-
-.u-guideitem{
-	.db;
-	border-bottom:1px dashed #ddd;
-	line-height:36px;
-	.clearfix;
-}
-.u-guideitem-reply,.u-guideitem-cmt{
-	.db;.clearfix;
-	line-height:36px;
-	color:#888;
-}
-.u-guideitem-cmt{
-	padding:0 10px;
-}
-
-.ua-responsive .screen-s {
-	.u-btn-publish{.none;}
-	.tbbox{.full(x);}
-	.m-guide-authortips{
-		.ps;padding:5px;
-		border-bottom:1px solid #ddd;
-	}
-	.u-guideitem{
-		padding:0 10px;
-	}
-	#threadlist .th{
-		.none;
-	}
-	.u-guideitem .u-count, .u-guideitem .u-pubtime{.none;}
-	.u-guideitem .u-title{
-		.w(100%);
-		.nobreak;
-	}
+.ua-mobile,.screen-s{
 	.w-pages{
 		padding:0 10px;
 	}
-	.u-guideitem-reply,.u-guideitem-cmt{
-		padding:0 20px;
-	}
+
 	.boardnav{
-		padding:0;
+		padding:0 !important;
 	}
 }
+
