--- a/template/yylmacro/forum/guide_list_row.htm
+++ b/template/yylmacro/forum/guide_list_row.htm
@@ -5,7 +5,10 @@
 					<td>
 						<span class="u-guideitem">
 							<span class="u-title">
-								<span class="u-bankuai"><a href="forum.php?mod=forumdisplay&fid=$thread[fid]" target="_blank">$list['forumnames'][$thread[fid]]['name']</a></span>
+								<span class="u-bankuai">
+									<a href="forum.php?mod=forumdisplay&fid=$thread[fid]" target="_blank">$list['forumnames'][$thread[fid]]['name']</a>
+								</span>
+
 								<!--{if !$thread['forumstick'] && $thread['closed'] > 1 && ($thread['isgroup'] == 1 || $thread['fid'] != $_G['fid'])}-->
 									<!--{eval $thread[tid]=$thread[closed];}-->
 								<!--{/if}-->
@@ -13,7 +16,9 @@
 								<!--{if $thread['moved']}-->
 									{lang thread_moved}:<!--{eval $thread[tid]=$thread[closed];}-->
 								<!--{/if}-->
+
 								<a href="forum.php?mod=viewthread&tid=$thread[tid]&{if $_GET['archiveid']}archiveid={$_GET['archiveid']}&{/if}extra=$extra" target="_blank" class="xst" >$thread[subject]</a><!--{if $_G['setting']['threadhidethreshold'] && $thread['hidden'] >= $_G['setting']['threadhidethreshold']}-->&nbsp;<span class="xg1">{lang hidden}</span>&nbsp;<!--{/if}--><!--{if $view == 'hot'}-->&nbsp;<span class="xi1">$thread['heats']{lang guide_attend}</span>&nbsp;<!--{/if}-->
+								
 								<!--{if $thread[icon] >= 0}-->
 									<img src="{STATICURL}image/stamp/{$_G[cache][stamps][$thread[icon]][url]}" alt="{$_G[cache][stamps][$thread[icon]][text]}" align="absmiddle" />
 								<!--{/if}-->
